# ENTS-node-firmware-cluster

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  Doxyfile  README.md  format.sh  git  lint.sh  notes  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_template.md  enhancement_template.md
.github/workflows/: docs.yaml  esp32.yaml  proto.yaml  publish-python.yaml  stm32-test.yaml  stm32.yaml
GUI/: README.md  decode_proto.py  user_config.py
GUI/Load/: cell_3121_.json  cell_3_.json  cell_43_.json  cell_565656414_.json  cell_565656_.json  cell_5_.json  (+6 more)
calibration/: 220_5_voltage_calib_-2to2v.csv  LICENSE  PingSMU.py  PingSPS.py  README.MD  least_squares_calibration.py  linear_regression.py  linear_regression_current.py  linear_regression_voltage.py  model_testing.py  nonlinear_regression.py  normalizing.py  pyMeasureQuickStart.py  recorder.py  requirements.in  requirements.txt  segmented_regression.py  test.csv  test.py
docs/: README.md  add-device-to-ttn.md  bsp-components.md  configuring-ports.md  controller.md  create-pio-cubemx.md  first-time-setup.md  quickstart.md  remote-dev.md  rg191.md
doxygen/: Doxyfile
esp32/: Doxyfile  README.md  esp32.dox  git_rev_macro.py  platformio.ini
proto/: Makefile  README.md  soil_power_sensor.options  soil_power_sensor.options.orig  soil_power_sensor.proto  soil_power_sensor.proto.orig
proto/python/: README.md  pyproject.toml  pyproject.toml.orig
proto/python/src/soil-power-sensor-protobuf/: __init__.py  soil_power_sensor_pb2.py  transforms.py
proto/python/src/soil_power_sensor_protobuf/: __init__.py  __init__.py.orig  cli.py  cli.py.orig  decode.py  decode_measurement.py  encode.py  esp32.py  soil_power_sensor_pb2.py  timestamp_pb2.py  transforms.py
proto/python/src/soil_power_sensor_protobuf/calibrate/: linear_regression.py  linear_regression_current.py  linear_regression_voltage.py  plots.py  recorder.py
proto/python/src/soil_power_sensor_protobuf/config/: adv_trace.py  user_config.py
proto/python/src/soil_power_sensor_protobuf/proto/: __init__.py  decode.py  encode.py  soil_power_sensor_pb2.py
proto/python/src/soil_power_sensor_protobuf/sim/: README.md  simulation.py
proto/python/tests/: test_generic.py  test_generic.py.orig  test_sim.py  test_simulator.py  test_transforms.py
python/: README.md  pyproject.toml  recorder.py  requirements.in
stm32/: .cproject  .cproject.bak  .gitignore  .mxproject  .project.bak  CPPLINT.cfg  Doxyfile  Makefile  README.md  STM32.ioc  cpplint.cfg  linear_regression.py  platformio.ini  stm32.dox  stm32.ioc  stm32pio.ini  tool_openocd.py
tools/: http_server.py
(+1572 files in other folders)
