[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soil-power-sensor-protobuf"
version = "0.0.1"
authors = [
  { name="John Madden", email="jmadden173@pm.me" },
]
description = "Python package for encoding/decoding measurement data from the Soil Power Sensor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/soil-power-sensor-protobuf"]

[project.urls]
Homepage = "https://github.com/jlab-sensing/soil-power-sensor-firmware"
Issues = "https://github.com/jlab-sensing/soil-power-sensor-firmware/issues"