[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soil-power-sensor-protobuf"
version = "2.2.0"
authors = [
  { name="John Madden", email="jmadden173@pm.me" },
]
description = "Python package for encoding/decoding measurement data from the Soil Power Sensor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'protobuf~=4.21.1',
]


[project.urls]
Homepage = "https://github.com/jlab-sensing/soil-power-sensor-firmware"
Issues = "https://github.com/jlab-sensing/soil-power-sensor-firmware/issues"

[tool.ruff]
exclude = [
  "src/soil_power_sensor_protobuf/soil_power_sensor_pb2.py",
]